--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,8 +8,45 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    height: 100vh;
+}
+
+.header {
+    background-color: rgb(99, 95, 95);
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    font-weight: bold;
+    width: 100%;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+
+.grid-and-control {
+    display: flex;
+    justify-content: space-around;
+    width: 60%;
+    margin-top: 10px;
+}
+
+.controls {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 50px;
+}
+
+.controls .gridDimension-title {
+    margin-bottom: 10px;
+}
+
+.controls .color-picker-title {
+    margin-bottom: 10px;
+}
+
+.color-picker #colorPicker {
+    width: 50%;
 }
 
 .grid {
@@ -29,3 +66,8 @@ body {
     background-color: blue;
 }
 
+.reset-button {
+    font-size: 0.9rem;
+    width: 80px;
+    height: 30px;
+}
